--- a/frontend/src/app/session/session-toolbar/session-toolbar.html
+++ b/frontend/src/app/session/session-toolbar/session-toolbar.html
@@ -10,7 +10,8 @@
             variant="text" />
     </ng-template>
     <ng-template #end>
-        <p-button icon="pi pi-window-maximize" text severity="info" (onClick)="toggleFullScreen()" />
+        <p-button [icon]="isFullScreen() ? 'pi pi-window-minimize' : 'pi pi-window-maximize'" text severity="info"
+            (onClick)="toggleFullScreen()" />
         <p-button icon="pi pi-sign-out" text severity="danger" (onClick)="callLeaveSession($event)" />
         <p-button icon="pi pi-ellipsis-v" text severity="contrast" (click)="callShowDrawer()" />
     </ng-template>
