--- a/frontend/src/app/process/process.html
+++ b/frontend/src/app/process/process.html
@@ -7,7 +7,8 @@
             <p-button icon="pi pi-folder-open" text severity="success" label="Datos del Proceso" />
         </ng-template>
         <ng-template #end>
-            <p-button icon="pi pi-window-maximize" text severity="info" (onClick)="toggleFullScreen()" />
+            <p-button [icon]="isFullScreen() ? 'pi pi-window-minimize' : 'pi pi-window-maximize'" text severity="info"
+                (onClick)="toggleFullScreen()" />
             <p-button icon="pi pi-sign-out" text severity="danger" (onClick)="goCoachees()" />
         </ng-template>
     </p-toolbar>
